crates/plotnik-lib/tests/04-emit/linking/field_not_on_node.txt
Q = (function_declaration condition: (identifier) @name) @fn
==== diagnostics ====
error: field `condition` is not valid on this node kind
 --> query.ptk:1:27
  |
1 | Q = (function_declaration condition: (identifier) @name) @fn
  |      -------------------- ^^^^^^^^^
  |      |
  |      on `function_declaration`
  |
help: valid fields for `function_declaration`: `body`, `name`, `parameters`
